--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   </head>
   <body class="container">
     <app-root></app-root>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/bec76b3840.js" crossorigin="anonymous"></script>
   </body>
